# Autoplanner

./: CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  setup.sh
autompc/: CMakeLists.txt  README.md
autompc/apps/: autompc_cli.cpp
autompc/examples/: circle_tracking.cpp
autompc/include/autompc/: autompc.h
autompc/include/autompc/controllers/: controllers.h  lqr_controller.h  mpc_controller.h
autompc/include/autompc/core/: trajectory.h  types.h
autompc/include/autompc/trajectory/: error_metrics.h  trajectory_tracker.h
autompc/python/autompc/: __init__.py
autompc/python/bindings/: CMakeLists.txt  py_autompc.cpp
autompc/results/: circle_pid.csv  circle_pure_pursuit.csv  circle_stanley.csv
autompc/scripts/: plot_tracking.py
autompc/src/controllers/: lqr_controller.cpp  mpc_controller.cpp  pid_controller.cpp  pure_pursuit.cpp  stanley_controller.cpp
autompc/src/core/: trajectory.cpp
autompc/src/trajectory/: error_metrics.cpp  trajectory_tracker.cpp
autompc/tests/: test_controllers.cpp  test_edge_cases.cpp  test_mpc.cpp
autoplanner/: .gitignore  CMakeLists.txt  README.md  plan.md
autoplanner/apps/: ablation_study.cpp  autoplanner_cli.cpp  compare_planners.cpp  dynamic_replanning.cpp  run_single_planner.cpp
autoplanner/benchmark/: benchmark_all.cpp
autoplanner/data/configs/: astar.yaml  benchmark.yaml  hybrid_astar.yaml  improved_astar.yaml  rrt.yaml  rrt_star.yaml  weighted_astar.yaml
autoplanner/data/maps/: maze_100x100.txt  random_100x100_density_20.txt  random_200x200_density_20.txt  random_500x500_density_20.txt  simple_50x50.txt  warehouse_100x100.txt
autoplanner/docs/: algorithms.md  api_reference.md  benchmark_report.md  design.md
autoplanner/examples/: astar_example.cpp  costmap_example.cpp  improved_astar_example.cpp  rrt_example.cpp  rrt_star_example.cpp  smoothing_example.cpp
autoplanner/include/autoplanner/: autoplanner.h
autoplanner/include/autoplanner/collision/: collision_checker.h  footprint_collision_checker.h  grid_collision_checker.h  line_collision_checker.h
autoplanner/include/autoplanner/core/: grid_map.h  node.h  path.h  planner_base.h  planner_factory.h  planner_result.h  planner_status.h  point.h  pose.h  types.h
autoplanner/include/autoplanner/costmap/: costmap_2d.h  distance_transform.h  obstacle_inflation.h
autoplanner/include/autoplanner/heuristics/: diagonal.h  euclidean.h  heuristic.h  manhattan.h  reeds_shepp.h
autoplanner/include/autoplanner/io/: config_loader.h  json_writer.h  map_loader.h  map_saver.h  path_writer.h
autoplanner/include/autoplanner/metrics/: benchmark_metrics.h  path_metrics.h
autoplanner/include/autoplanner/planners/graph_search/: astar.h  dijkstra.h  dstar_lite.h  improved_astar.h  jps.h  weighted_astar.h
autoplanner/include/autoplanner/planners/kinodynamic/: hybrid_astar.h
autoplanner/include/autoplanner/planners/sampling/: bi_rrt.h  informed_rrt_star.h  rrt.h  rrt_star.h
autoplanner/include/autoplanner/smoothing/: bezier_smoother.h  bspline_smoother.h  gradient_smoother.h  path_smoother.h  shortcut_smoother.h
autoplanner/include/autoplanner/utils/: logger.h  math_utils.h  random.h  timer.h
autoplanner/python/autoplanner/: __init__.py
autoplanner/python/bindings/: CMakeLists.txt  py_autoplanner.cpp
autoplanner/scripts/: compare_results.py  generate_random_map.py  generate_warehouse_map.py  make_gif.py  plot_ablation.py  plot_benchmark.py  run_all_experiments.py  run_navigation_pipeline.py  visualize_costmap.py  visualize_path.py
autoplanner/src/collision/: collision_checker.cpp  footprint_collision_checker.cpp  grid_collision_checker.cpp  line_collision_checker.cpp
autoplanner/src/core/: grid_map.cpp  path.cpp  planner_factory.cpp  planner_result.cpp  types.cpp
autoplanner/src/costmap/: costmap_2d.cpp  distance_transform.cpp  obstacle_inflation.cpp
autoplanner/src/heuristics/: diagonal.cpp  euclidean.cpp  manhattan.cpp  reeds_shepp.cpp
autoplanner/src/io/: config_loader.cpp  map_saver.cpp
autoplanner/src/metrics/: benchmark_metrics.cpp  path_metrics.cpp
autoplanner/src/planners/graph_search/: astar.cpp  dijkstra.cpp  dstar_lite.cpp  improved_astar.cpp  jps.cpp  weighted_astar.cpp
autoplanner/src/planners/kinodynamic/: hybrid_astar.cpp
autoplanner/src/planners/sampling/: bi_rrt.cpp  informed_rrt_star.cpp  rrt.cpp  rrt_star.cpp
autoplanner/src/smoothing/: bezier_smoother.cpp  bspline_smoother.cpp  gradient_smoother.cpp  shortcut_smoother.cpp
autoplanner/tests/: CMakeLists.txt  test_astar.cpp  test_bi_rrt.cpp  test_collision_checker.cpp  test_config_loader.cpp  test_dijkstra.cpp  test_dstar_lite.cpp  test_edge_cases.cpp  test_grid_map.cpp  test_hybrid_astar.cpp  test_improved_astar.cpp  test_informed_rrt_star.cpp  test_jps.cpp  test_map_loader.cpp  test_metrics.cpp  test_planner_factory.cpp  test_rrt.cpp  test_rrt_star.cpp  test_smoothing.cpp  test_utils.cpp  test_weighted_astar.cpp
